added homepage html for id-1

--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
 
 <body>
     <header>
-        countries
+        <h1>click on country for more info</h1>
     </header> 
     <main>
-
+        <div id="countries">
+            <div id="country">
+                <h1>nepal</h1>
+                <img src="./assets/nepal.jpg">
+            </div>
+        </div>
     </main>
     <script type="module" src="./app.js"></script>
 </body>
