added base styling for homepage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header> 
     <main>
         <div id="countries">
-            <div id="country">
+            <div class="country">
                 <h1>nepal</h1>
                 <img src="./assets/nepal.jpg">
             </div>
