ensures connection between fetch utils, render utils, and app.js to html

--- a/index.html
+++ b/index.html
@@ -18,12 +18,7 @@
         <h1>click on country for more info</h1>
     </header> 
     <main>
-        <div id="countries">
-            <div class="country">
-                <h1>nepal</h1>
-                <img src="./assets/nepal.jpg">
-            </div>
-        </div>
+        <div id="countries"></div>
     </main>
     <script type="module" src="./app.js"></script>
 </body>
