adds base styling to detail pages and header fonts

--- a/details/index.html
+++ b/details/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="./home.css">
     <title>country detail</title>
 </head>
-<header>county details</header>
+<header>
+    <a href="/">back</a>
+</header>
 <body>
-    <a href="/">home</a>
+    <h1 class="about">about</h1>
     <div id="country-details"></div>
     <script type="module" src="details.js"></script>
 </body>
+<footer></footer>
 </html>
