--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/home.css">
     <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <title>countries</title>
+    <title>three countries</title>
 </head>
 
 <body>
     <header>
-        <h1>click on country for more info</h1>
+        <h1>three countries</h1>
     </header> 
     <main>
         <div id="countries"></div>
