--- a/details/index.html
+++ b/details/index.html
@@ -11,7 +11,7 @@
     <title>country detail</title>
 </head>
 <header>
-    <a href="/">back</a>
+    <div><a href="/">back</a></div>
 </header>
 <body>
     <h1 class="about">about</h1>
