added another class to renderfunction for styling the p in an overlay

--- a/details/index.html
+++ b/details/index.html
@@ -15,7 +15,9 @@
 </header>
 <body>
     <h1 class="about">about</h1>
-    <div id="country-details"></div>
+    <div id="country-details">
+        <!-- <p class="overlay">this is the overlay</p> -->
+    </div>
     <script type="module" src="details.js"></script>
 </body>
 <footer></footer>
